--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,215 @@
-body{
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 20px;
+/* Basic CSS resets -- leveling slight inconsistencies in browsers */
+html, body {
+	margin:0px;
+	padding:0px;
+	height:100%;
 }
 
-header{
-    background-color: #35424a;
-    color: #ffffff;
-    padding: 10px 0;
-    text-align: center;
+html {
+		/* Standard text-settings below */
+	font-size: 1em;
+    line-height: 1.4em;
 }
 
-footer{
-    background-color: #35424a;
-    color: #ffffff;
-    text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+
+@font-face {
+    font-family: 'GallaeciaForte'; 
+    src: url('fonts/GallaeciaForte.ttf');
 }
+@font-face {
+    font-family: 'BirchLeaf'; 
+    src: url('fonts/BirchLeaf.ttf');
+}
+html, body {
+    cursor: url("cursor.cur"), default;
+}
+/* Mobile First CSS: we'll design for phone sizes first, then add media queries for larger screens later */
+
+body {
+	font-family: 'BirchLeaf';
+	margin: 0;
+	padding: 0;
+}
+
+.header {
+	background-color: #333;
+	background-image: url('img/blacktexture.jpg');
+	font-family: 'GallaeciaForte';
+	font-size: 40px;
+	color: white;
+	padding: 20px;
+	text-align: center;
+}
+
+.nav {
+	background-color: #444;
+	display: flex;
+	background-image: url('img/blacktexture.jpg');
+	padding: 10px;
+	font-family: 'BirchLeaf';
+	width: 100%;
+	text-align: center;
+}
+
+.nav a {
+	color: white;
+	text-decoration: none;
+	margin: 0 10px;
+}
+a:hover{
+	cursor: url("select.cur"), default;
+}
+
+h2 {
+	border-bottom: solid 1px;
+}
+
+.about-site {
+	padding: 20px;
+	font-family: 'BirchLeaf';
+	background-color: #f0f0f0;
+}
+.about-club {
+	padding: 10px;
+	font-family: 'BirchLeaf';
+	background-color: white;
+	border: 1px solid;
+}
+
+main {
+	display: grid;
+	grid-template-columns: 70% 30%;
+	align-items: stretch; /* Ensures both elements have the same height */
+  }
+  
+  .about-site {
+	grid-column: 1;
+  }
+  
+  aside {
+	padding: 10px;
+	grid-column: 2;
+	background-image: url('img/blacktexture.jpg');
+	color: #f0f0f0;
+  }
+
+.members table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+button {
+	border: ridge black 30px;
+	font-family: 'BirchLeaf';
+	font-size: 20px;
+	margin: auto;
+	display: block;
+	margin-bottom: 30px;
+}
+
+.members th, td {
+	font-family: 'BirchLeaf';
+	border: 1px solid #865959;
+	padding: 10px;
+	text-align: center;
+}
+
+.members th {
+	font-family: 'GallaeciaForte';
+	background-color: #f0f0f0;
+}
+
+.footer {
+	font-family: 'GallaeciaForte';
+	background-color: #333;
+	color: white;
+	padding: 10px;
+	text-align: center;
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	background-image: url('img/blacktexture.jpg');
+}
+
+@media only screen and (max-width: 850px) {
+	main{
+		display: block;
+    	width: 100%;
+	}
+	.about-club{
+		display: block;
+    	width: 100%;
+	}
+	aside{
+		padding: 20px;
+		display: block;
+    	width: 100%;
+	}
+	table {
+		border: 0;
+	}
+	
+	table caption {
+		font-size: 1.3em;
+	}
+	h1{
+		font-size: 30px;
+	}
+	
+	table thead {
+		display: none;
+	}
+	
+	table td {
+		display: block;
+		padding: .6em;
+	}
+	
+	table th {
+		display: block;
+		padding: .6em;
+	}
+	
+	table td:before {
+		content: attr(data-label);
+		float: left;
+		font-weight: bold;
+		width: 200px;
+	}
+	
+	table th[data-label]:before {
+		content: attr(data-label);
+	}
+}
+
+
+
+
+
+/* ========================================
+MEDIA QUERIES!
+You can adjust the min-width numbers below, and add as many new media queries as you need.
+======================================== */
+
+
+
+/* Minimum width for laptops. */
+@media all and (min-width: 769px) {
+	
+	
+	
+	
+} /* closes 769px+ */
+
+
+
+
+/* Minimum width for desktop screens. */
+@media all and (min-width: 1024px) {
+	
+	
+	
+	
+} /* closes 1024px+ */
+
+
