--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,31 @@ html {
   line-height: 1.4em;
 }
 
+#book {
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-dark);
+  background-image: url('img/book.png');
+  background-size: cover;
+  background-position: center;
+}
+
+#book img {
+    display: block; 
+    width: 100%;
+    height: auto;
+}
+
+.overlay-text {
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: white;
+    font-size: 20px;
+    text-align: left;
+}
+
 body {
   font-family: var(--font-main);
   margin: 0;
